<resources>
    <string name="app_name">MobileDevelopmentCourseLabApp</string>
    <string name="title_article">Статья</string>
    <string name="title_list">Список</string>
    <string name="title_third">Третий</string>
    <string name="article_title">Стал известен новый кандидат на замену Клоппу в «Ливерпуле»</string>

    <string name="stats">Статистика выступлений</string>
    <string name="count_pattern">%d %s</string>
    <string name="title_card">Карточка</string>
    <string name="title_web_page">Веб-страница</string>
    <string name="age_title">Возраст</string>
    <string name="position">Позиция</string>
    <string name="team">Команда</string>
    <string name="infoTitle">Информация</string>
    <string name="share">Поделиться</string>
    <string name="comments">Комментарии</string>
    <string name="comment_hint">Введите комментарий</string>
    <string name="load">Загрузить</string>
    <string name="loading">Загрузка</string>
    <string name="watch_in_webview">Смотреть в WebView</string>
    <string name="name">Имя</string>
    <string name="number">Номер</string>
    <string name="done">Готово</string>
    <string name="add">Добавить</string>
    <string name="goalkeeper">Вратарь</string>
    <string name="defender">Защитник</string>
    <string name="midfielder">Полузащитник</string>
    <string name="forward">Нападающий</string>
    <string name="textLinks">Страница в социальной сети\nРезюме</string>
    <string name="linkSocial">Страница</string>
    <string name="linkResume">Резюме</string>

    <plurals name="age">
        <item quantity="one">год</item>
        <item quantity="few">года</item>
        <item quantity="many">лет</item>
        <item quantity="other">лет</item>
    </plurals>

    <plurals name="games">
        <item quantity="one">игра</item>
        <item quantity="few">игры</item>
        <item quantity="many">игр</item>
        <item quantity="other">игр</item>
    </plurals>

    <plurals name="goals">
        <item quantity="one">гол</item>
        <item quantity="few">гола</item>
        <item quantity="many">голов</item>
        <item quantity="other">голов</item>
    </plurals>

    <plurals name="assists">
        <item quantity="one">передача</item>
        <item quantity="few">передачи</item>
        <item quantity="many">передач</item>
        <item quantity="other">передач</item>
    </plurals>

    <plurals name="yellows">
        <item quantity="one">желтая</item>
        <item quantity="few">желтых</item>
        <item quantity="many">желтых</item>
        <item quantity="other">желтых</item>
    </plurals>

    <plurals name="reds">
        <item quantity="one">красная</item>
        <item quantity="few">красных</item>
        <item quantity="many">красных</item>
        <item quantity="other">красных</item>
    </plurals>
</resources>