<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/offset_medium">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/icon_48"
        android:layout_height="@dimen/icon_48"
        android:src="@drawable/account" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_medium"
        android:hint="@string/name">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_medium"
        android:hint="@string/number">

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:digits="0123456789"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/positionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position"
        android:layout_marginTop="@dimen/offset_medium" />

    <RadioGroup
        android:id="@+id/positionGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/variantGoalkeeper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goalkeeper" />

        <RadioButton
            android:id="@+id/variantDefender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defender" />

        <RadioButton
            android:id="@+id/variantMidfielder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/midfielder" />

        <RadioButton
            android:id="@+id/variantForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward" />
    </RadioGroup>

    <Button
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/offset_medium"
        android:text="@string/done" />

</LinearLayout>